--- a/pom.xml
+++ b/pom.xml
@@ -120,8 +120,8 @@
             <Bundle-Description>OSGI version of jar ${project.name}</Bundle-Description>
             <Export-Package>*</Export-Package>
             <!-- <Require-Bundle></Require-Bundle> -->
-            <!-- <Import-Package>*</Import-Package>
-            <DynamicImport-Package>*</DynamicImport-Package> -->
+            <Import-Package>!org.apache.log,!org.apache.avalon.framework.logger,*</Import-Package>
+            <DynamicImport-Package>org.apache.log,org.apache.avalon.framework.logger</DynamicImport-Package>
           </instructions>
         </configuration>
         <extensions>true</extensions>
