--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.lucee</groupId>
   <artifactId>commons-logging</artifactId>
-  <version>1.1.1</version>
+  <version>1.1.1.L0001</version>
   <name>Apache Commons Logging</name>
   <packaging>bundle</packaging>
 
